Fix the z-index issue with particle better.

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,7 +25,7 @@
 #particles-js canvas {
 	position: absolute;
 	top:0;
-	z-index: -3;
+	z-index: -1;
 }
 
 /* ---DESKTOP--- */
